// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Article /> renders with default style 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 1rem;
  min-height: 13rem;
  padding: 1.2rem 1.2rem 0.8rem 1.2rem;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  background: linear-gradient( #fff 0%,#fff 0.3rem,#000 0.3rem,#000 0.6rem,#fff 0.6rem );
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  border-radius: 0.5rem;
  text-align: left;
  word-break: break-word;
}

@media screen and (min-width:40rem) {
  .c0 {
    min-width: 16.5rem;
    margin: 1.5rem 1rem;
    -webkit-flex: 1 1 27%;
    -ms-flex: 1 1 27%;
    flex: 1 1 27%;
  }
}

<article
  className="c0"
/>
`;

exports[`<Article /> renders with theme 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 1rem;
  min-height: 13rem;
  padding: 1.2rem 1.2rem 0.8rem 1.2rem;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  background: linear-gradient( #202124 0%,#202124 0.3rem,#fff 0.3rem,#fff 0.6rem,#202124 0.6rem );
  box-shadow: none;
  border-radius: 0.5rem;
  text-align: left;
  word-break: break-word;
}

@media screen and (min-width:40rem) {
  .c0 {
    min-width: 16.5rem;
    margin: 1.5rem 1rem;
    -webkit-flex: 1 1 27%;
    -ms-flex: 1 1 27%;
    flex: 1 1 27%;
  }
}

<article
  className="c0"
/>
`;
